syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service HealthData{
  rpc CreateHealthRecord(HealthRecordRequest) returns (google.protobuf.Empty);
  rpc GetHealthRecord(HealthRecordIdRequest) returns (HealthRecord);
  rpc GetAllHealthRecords(google.protobuf.Empty) returns (HealthRecordResponse);
  rpc UpdateHealthRecord(HealthRecord) returns (Message);
  rpc DeleteHealthRecord(HealthRecordIdRequest) returns (Message);
  rpc GetAthleteHealthRecords(AthleteFilter) returns (HealthRecordResponse);
}

message HealthRecordRequest {
  string athleteId = 1;
  google.protobuf.Timestamp timestamp = 2;
  int32 heartRate = 3;
  float bodyTemperature = 4;
  string bloodPressure = 5;
  int32 bloodOxygen = 6;
  int32 stepCount = 7;
  ActivityStatus activityStatus = 8;
  double latitude = 9;
  double longitude = 10;
  int32 secureTransmissionStatus = 11;
}

message HealthRecordResponse {
  repeated HealthRecord records = 1;
}

message HealthRecord {
  int32 recordId = 1;
  string athleteId = 2;
  google.protobuf.Timestamp timestamp = 3;
  int32 heartRate = 4;
  float bodyTemperature = 5;
  string bloodPressure = 6;
  int32 bloodOxygen = 7;
  int32 stepCount = 8;
  ActivityStatus activityStatus = 9;
  double latitude = 10;
  double longitude = 11;
  int32 secureTransmissionStatus = 12;
}

message HealthRecordIdRequest{
  int32 recordId = 1;
}

message Message {
  int32 recordId = 1;
  string message = 2;
}

message AthleteFilter {
  string athleteId = 1;
  ActivityStatus activityStatus = 2;
  google.protobuf.Timestamp startTime = 3;
  google.protobuf.Timestamp endTime = 4;
}

enum ActivityStatus {
  Walking = 0;
  Cycling = 1;
  Running = 2;
  Resting = 3;
}